# Dynamic-Timer-Resolution

./: Cargo.toml  README.md  build.bat  build.rs  run.bat
src/: main.rs
